# multimodal-rag-cli-gt

./: .gitignore  README-en.md  README.md  main.py  pyproject.toml
material/: tutorial.md
utils/: chatbot.py  embeddings.py  pdf.py  text_splitter.py  view_image.py  youtube.py
